2011-05-29 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Ssh.py: Fix scp user option in Scp class (ticket #152).

	* Engine/*.py: Internal engine design change: do not retry engine
	eventloop on any EngineClient registration changes, so process more events
	by chunk (should be faster) and add a loop iteration counter to work
	around internally re-used FDs (finalize ticket #153).

2011-05-26 S. Thiell <stephane.thiell@cea.fr>

	* Worker/EngineClient.py: Enable fastsubprocess module, and use file
	descriptors instead of file objects everywhere (ticket #153).

	* Worker/fastsubprocess.py: Faster, relaxed version of Python 2.6
	subprocess.py with non blocking fd support.

2011-05-15 S. Thiell <stephane.thiell@cea.fr>

	* Engine/Engine.py: Improved start_all() fanout algorithm by adding a
	separate pending clients list.

	* Created 1.5 branch.

2011-03-19 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.4.3 released.

	* CLI/Nodeset.py: Make stdin '-' keyword work when used for -i/x/X
	operations (ticket #148).

	* CLI/Clush.py: Fixed issue when using clush -bL (missing argument) due to
	latest 1.4.2 changes. Added tests/ClushScriptTest.py to detect that in
	the future (ticket #147).

2011-02-15 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.4.2 released.

2011-03-12 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Fixed issues with objects copying, so got rid of copy module
	and added optimized RangeSet.copy() and NodeSet.copy() methods (ticket
	#146).

2011-03-09 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Added running progress indicator for --[r]copy commands.

2011-03-08 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Improved -v switch (closes ticket #100: print live node
	output plus noderange-grouped output at the end).

	* CLI/Clubak.py: Add -T,--tree message tree mode option (ticket #144).

	* MsgTree.py: Class initialization variant (trace mode) to keep track of
	old keys/nodes for each message (part of #144).
